test/conformance/kuttl/validate/policy/standard/psa/test-exclusion-volume-types/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-volume-types
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
